Version 2.02.181 - 
=================================

Version 2.02.180 - 19th July 2018
=================================
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.
  lvconvert: provide possible layouts between linear and striped/raid
  Fix unmonitoring of merging snapshots.
  Add missing -l description in fsadm man page.
  Cache can uses metadata format 2 with cleaner policy.
  Avoid showing internal error in lvs output or pvmoved LVs.
  Fix check if resized PV can also fit metadata area.
  Reopen devices RDWR only before writing to avoid udev issues.
  Change pvresize output confusing when no resize took place.
  Fix lvmetad hanging on shutdown.
  Fix mem leak in clvmd and more coverity issues.

Version 2.02.179 - 18th June 2018
=================================
  Allow forced vgchange to lock type none on clustered VG.
  Add the report field "shared".
  Enable automatic metadata consistency repair on a shared VG.
  Fix pvremove force on a PV with a shared VG.
  Fixed vgimportclone of a PV with a shared VG.
  Enable previously disallowed thin/cache commands in shared VGs.
  Enable metadata-related changes on LVs active with shared lock.
  Do not continue trying to use a device that cannot be opened.
  Fix problems opening a device that fails and returns.
  Use versionsort to fix archive file expiry beyond 100000 files.

Version 2.02.178 - 13th June 2018
=================================

Version 2.02.178-rc1 - 24th May 2018
====================================
  Add libaio dependency for build.
  Remove lvm1 and pool format handling and add filter to ignore them.
  Move some filter checks to after disks are read.
  Rework disk scanning and when it is used.
  Add new io layer and shift code to using it.
  Fix lvconvert's return code on degraded -m raid1 conversion.